--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde_json = "1.0"
 ahash = "0.8"
 rustc-hash = "2.0"
 nthash = "0.5"
+twox-hash = "2.0"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 procfs = "0.17"
