--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,9 @@ rayon = "1.10"
 dashmap = "6.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-ahash = "0.8"
 rustc-hash = "2.0"
 nthash = "0.5"
-twox-hash = "2.0"
+core_affinity = "0.8"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 procfs = "0.17"
